# Gatekeeper

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  server.py
core/: config_loader.py
core/adapters/: base.py  postgres_adapter.py  sqlite_adapter.py
core/api/: connector.py
core/governance/: audit.py  masker.py  validator.py
tests/: conftest.py  test_audit.py  test_config_loader.py  test_masker.py  test_sqlite_adapter.py  test_validator.py
